# car-parcer

./: .gitignore  Parser.py  Parser.pyproj  advertisement.py  closer.py  database.sql  db_connection.py  env.example.py  exception.py  exporter.py  main.py  model.py  pyproject.toml  spider.py  store.py  tmp.png1  tmp.py
.ssh/: id_rsa
parsers/: abstract.py  blocket.py  carinfo.py  mobile_de.py  ss.py  tmp.html
