[tool.poetry]
name = "parser"
version = "0.1.0"
description = "parse sites"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"
mysql-connector-python = "^8.4.0"
psycopg2 = "^2.9.9"
zenrows = "^1.3.2"
selenium = "^4.21.0"
scrapy-selenium = "^0.0.7"
scrapy-playwright = "^0.0.34"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
